@@ -43,7 +43,7 @@ AC_C_BIGENDIAN
 dnl Check for system libs needed
 
 AC_FUNC_ALLOCA
-AC_CHECK_FUNCS(setenv putenv)
+AC_CHECK_FUNCS(setenv putenv fchown fchmod)
 AC_CHECK_FUNC(connect,,[AC_CHECK_LIB(socket,connect)])
 AC_CHECK_FUNC(gethostbyname,,[AC_CHECK_LIB(nsl,gethostbyname)])
 AC_CHECK_FUNC(nanosleep,,[
